[package]
name = "locker-db"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[lib]
name = "locker_db"
path = "src/lib/mod.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
anyhow = "1.0.59"
rand = "0.8.5"
hex = "0.4.3"
bincode = "1.3.3"
dashmap = "5.3.4"
